# movementswap-core

./: .env  .gitignore  cmd.sh  test.sh
.aptos/: config.yaml
Faucet/: Move.toml
LPCoin/: Move.toml
LPResourceAccount/: Move.toml
Swap/: Move.toml
Swap/sources/: swap.move
TestCoin/: Move.toml
tests/bash-cli/: main.rs  test.sh
tests/rust-sdk/: Cargo.toml
tests/rust-sdk/src/: main.rs
tests/typescript-sdk/: main.test.ts
u256/: Move.toml
uq64x64/: Move.toml
